# Earth2151

./: .gitignore  README.md
Earth2150/: DESKTOP-KE0NGQ1-Errors.txt  Setup.exe.i64  ddc  ddc.cmd  ddc_xdg  steam_appid.txt
Earth2150/Music/: EDAMB.MP2  EDDAY_1.MP2  EDWAR_1.MP2  EDWAR_2.MP2  EDWAR_3.MP2  Ednight_1.mp2  Ednight_2.mp2  Edstat.mp2  LCAMB.MP2  LCDAY_1.MP2  LCWAR_1.MP2  LCWAR_2.MP2  LCWAR_3.MP2  Lcnight_1.mp2  Lcnight_2.mp2  Lcstat.mp2  MAINED.MP2  MAINLC.MP2  MAINUCS.MP2  Main.mp2  UCSDAY_1.MP2  UCSWAR_1.MP2  UCSWAR_2.MP2  UCSWAR_3.MP2  UCSnight_2.mp2  Ucsnight_1.mp2  Ucsstat.mp2
Earth2150/Video/: CSKilled.wd1  VideoLC.wd1  VideoUCS.wd1  cs102.wd1  cs103.wd1  cs104.wd1  cs105.wd1  cs106.wd1  cs107.wd1  cs108.wd1  cs109.wd1  cs111.wd1  cs112.wd1  cs115.wd1  cs201.wd1  cs202.wd1  cs204.wd1  cs205.wd1  cs206.wd1  cs207.wd1  cs208.wd1  cs209.wd1  cs211.wd1  cs212.wd1  cs214.wd1  cs216.wd1  cs305.wd1  cs309.wd1  cs311.wd1  cs316.wd1  intro3.crc  videoED.wd1
Earth2150/WDFiles/: Interface.wd  Language.wd  Parameters.wd  Players.wd  Scripts.wd  Sounds.wd  Terrains.wd  Update001.wd  Update002.wd  Update003.wd  Update004.wd  Update005.wd  Update006.wd  Update007.wd  Update008.wd  Wave22kH.crc
Earth2150/reg/: 253880_install.vdf  253880_install.vdf.bak
doc/: Earth2150_MSH.bt  NET19_msh.txt  NewOne.txt  Research2150_2871.txt  Research2150_2_9.txt  links.txt  tips.txt  форматы файлов.txt
doc/Reverse Engineering Earth 2150/: Reverse Engineering Earth 2150, Part 1_ File Structure _ Terrana’s Entire Website.html  Reverse Engineering Earth 2150, Part 2_ Data Types _ Terrana’s Entire Website.html  Reverse Engineering Earth 2150, Part 3_ Vehicle Data _ Terrana’s Entire Website.html  Reverse Engineering Earth 2150, Part 4_ PAR Decompiler _ Terrana’s Entire Website.html  Reverse Engineering Earth 2150, Part 5_ PAR Compiler _ Terrana’s Entire Website.html  Reverse Engineering Earth 2150, Part 6_ Texture Files _ Terrana’s Entire Website.html  Reverse Engineering Earth 2150, Part 7_ Mesh Files _ Terrana’s Entire Website.html  link.txt
doc/formats/: mesh.txt
files/Digital Deluxe Content/: Legal.txt
files/Meshes3D/: AOD2MSH.bat  (+9 more)
sources/EarthPacker/: Application.cpp  CMakeLists.txt  Frame.cpp  Frame.h  Log.cpp  Log.h  defines.h  main.cpp
sources/EarthPacker/Controls/: Canvas.cpp  Canvas.h  ControlDir.cpp  Notebook.cpp  Notebook.h
sources/EarthPacker/Controls/Notebook/: Notebook.cpp  Notebook.h  NotebookPage.cpp  NotebookPage.h
sources/EarthPacker/Controls/Notebook/NotebookLeft/: NotebookLeft.cpp  NotebookLeft.h  PageDirectory.cpp  PageDirectory.h  PageInfoWD.cpp  PageInfoWD.h  PageTree.cpp  PageTree.h
sources/EarthPacker/Controls/Notebook/NotebookRight/: NotebookRight.cpp  NotebookRight.h  PageInfo.cpp  PageInfo.h
sources/EarthPacker/Controls/NotebookLeft/: ControlDir.cpp  NotebookLeft.cpp  NotebookLeft.h  PageDirectory.cpp  PageDirectory.h
sources/EarthPacker/Controls/NotebookRight/: NotebookRight.cpp  NotebookRight.h
sources/EarthPacker/Display/: Canvas.cpp  Canvas.h  Grid.cpp  Grid.h
sources/EarthPacker/Display/Diagram/: Canvas.cpp  Canvas.h  Diagram.cpp  Diagram.h
sources/EarthPacker/Display/Grid/: Grid.cpp
sources/EarthPacker/Models/: Model.cpp  Model.h  ModelPart.cpp  ModelPart.h  PartNode.cpp  PartNode.h
sources/EarthPacker/Models/Collections/: Animations.cpp  Animations.h  Faces.cpp  Faces.h  ICollection.cpp  ICollection.h  Lights.cpp  Lights.h  MountPoints.cpp  MountPoints.h  Vertices.cpp  Vertices.h
sources/EarthPacker/Models/Elements/: Face.cpp  Face.h  Light.cpp  Light.h  ModelTemplate.cpp  ModelTemplate.h  RotationFrame.cpp  RotationFrame.h  TextureInfo.cpp  TextureInfo.h  Vector.cpp  Vector.h  Vertex.cpp  Vertex.h
sources/EarthPacker/Packer/: DescriptionFile.cpp  DescriptionFile.h  Packer.cpp  Packer.h
sources/EarthPacker/Packer/Resources/: ArchiveWD.cpp  ArchiveWD.h  Directory.cpp  Directory.h  Group.cpp  Group.h  Interface.cpp  Interface.h  Level.cpp  Level.h  Mesh.cpp  Mesh.h  PackMesh.cpp  Resource.cpp  Resource.h  ResourceDirectory.cpp  ResourceDirectory.h  ResourceFactory.cpp  ResourceFactory.h  Terrain.cpp  Terrain.h  TranslatableResource.cpp  TranslatableResource.h
sources/EarthPacker/Resource/Mesh/: Mesh.cpp  Mesh.h  Model.cpp
sources/EarthPacker/Resources/: Archive.cpp  Archive.h  ArchiveWD.cpp  ArchiveWD.h  Description.cpp  Description.h  Directory.cpp  Directory.h  Group.cpp  Group.h  Interface.cpp  Interface.h  Level.cpp  Level.h  Mesh.cpp  Mesh.h  Packer.cpp  Packer.h  Resource.cpp  Resource.h  ResourceFactory.cpp  ResourceFactory.h  Terrain.cpp  Terrain.h  TranslatableResource.cpp  TranslatableResource.h
sources/EarthPacker/Textures/: Image.cpp  Image.h  Texture.cpp  Texture.h
sources/EarthPacker/Utils/: FileInputStream.cpp  FileInputStream.h  Matrix.cpp  Matrix.h  ThreadPool.cpp  ThreadPool.h  Zlib.cpp  Zlib.h
(+2235 files in other folders)
